{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 27,
  "lineage": "417dcf60-c339-0d77-cbf3-ee5814099978",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04782ff8e85d0b846",
            "arn": "arn:aws:ec2:ap-southeast-1:851725533919:elastic-ip/eipalloc-04782ff8e85d0b846",
            "association_id": "eipassoc-06078ea5c38ccfa00",
            "domain": "vpc",
            "id": "eipalloc-04782ff8e85d0b846",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0adf5c99b9f8fe276",
            "private_dns": "ip-10-0-2-41.ap-southeast-1.compute.internal",
            "private_ip": "10.0.2.41",
            "public_dns": "ec2-18-136-181-167.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.181.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725533919:internet-gateway/igw-0b76ca256536f1eb3",
            "id": "igw-0b76ca256536f1eb3",
            "owner_id": "851725533919",
            "tags": {
              "Name": "marc-igw"
            },
            "tags_all": {
              "Name": "marc-igw"
            },
            "vpc_id": "vpc-09dabaccbd2476e75"
          },
          "dependencies": [
            "aws_vpc.marc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04782ff8e85d0b846",
            "association_id": "eipassoc-06078ea5c38ccfa00",
            "connectivity_type": "public",
            "id": "nat-0301c6983d04c8dfa",
            "network_interface_id": "eni-0adf5c99b9f8fe276",
            "private_ip": "10.0.2.41",
            "public_ip": "18.136.181.167",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0875df0d7e72c62a0",
            "tags": {
              "Name": "marc NAT"
            },
            "tags_all": {
              "Name": "marc NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_subnet.marc-public",
            "aws_vpc.marc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05d94613991e56fb21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0301c6983d04c8dfa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d94613991e56fb2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rtb",
            "aws_subnet.marc-public",
            "aws_vpc.marc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725533919:route-table/rtb-05d94613991e56fb2",
            "id": "rtb-05d94613991e56fb2",
            "owner_id": "851725533919",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-rtb"
            },
            "tags_all": {
              "Name": "private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dabaccbd2476e75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.marc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725533919:route-table/rtb-0752e5f0b267e6a25",
            "id": "rtb-0752e5f0b267e6a25",
            "owner_id": "851725533919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b76ca256536f1eb3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rtb"
            },
            "tags_all": {
              "Name": "public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dabaccbd2476e75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.marc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "marc-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725533919:subnet/subnet-052f7dd39438a099f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052f7dd39438a099f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725533919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "marc-private"
            },
            "tags_all": {
              "Name": "marc-private"
            },
            "vpc_id": "vpc-09dabaccbd2476e75"
          },
          "dependencies": [
            "aws_vpc.marc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "marc-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725533919:subnet/subnet-0875df0d7e72c62a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0875df0d7e72c62a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725533919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "marc-public"
            },
            "tags_all": {
              "Name": "marc-public"
            },
            "vpc_id": "vpc-09dabaccbd2476e75"
          },
          "dependencies": [
            "aws_vpc.marc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "marc-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725533919:vpc/vpc-09dabaccbd2476e75",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0575e49243388eb3b",
            "default_route_table_id": "rtb-0f97912a6e52d6e77",
            "default_security_group_id": "sg-0e44264efb9331384",
            "dhcp_options_id": "dopt-00530e4484d850f7e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09dabaccbd2476e75",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f97912a6e52d6e77",
            "owner_id": "851725533919",
            "tags": {
              "Name": "marc-vpc"
            },
            "tags_all": {
              "Name": "marc-vpc"
            }
          }
        }
      ]
    }
  ]
}